--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@ body {
   background-repeat: no-repeat;
  background-attachment: fixed;
 }
+
+.rounded {
+  border-radius: 5px;
+  display: block;
+  width: 100%;
+  height: auto;
+}
