updating some css and adding an image for the sidebar

--- a/app.scss
+++ b/app.scss
@@ -1,4 +1,6 @@
 @import "@material/top-app-bar/mdc-top-app-bar";
+@import "@material/drawer/mdc-drawer";
+@import "@material/list/mdc-list";
 
 body {
   background-image: url('/images/background.jpg');
@@ -9,6 +11,21 @@ body {
  font-family: 'Pirata One';
 }
 
+
+.attempt{
+  @include mdc-drawer-width(600px);
+}
+.mdc-drawer__content {
+  background-image: url('/images/gloommap.jpg');
+  background-repeat: no-repeat;
+ background-attachment: fixed;
+ height: 100%;
+
+}
+.mdc-list-item__text {
+  font-family: 'Pirata One';
+  font-size: 24px;
+}
 .rounded {
   border-radius: 35px;
   display: block;
