--- a/app.scss
+++ b/app.scss
@@ -32,13 +32,6 @@ img:not([src]) {
   font-family: 'Pirata One';
   font-size: 24px;
 }
-.rounded {
-  border-radius: 35px;
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
 
 .mdc-drawer-app-content {
   flex: auto;
@@ -120,6 +113,13 @@ img:not([src]) {
 }
 .rounded {
   border-radius: 35px;
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.rounded_s {
+  border-radius: 15px;
   display: block;
   width: 100%;
   height: auto;
