Adding bottom discard display

--- a/app.scss
+++ b/app.scss
@@ -2,9 +2,9 @@
 @import "@material/drawer/mdc-drawer";
 @import "@material/list/mdc-list";
 @import "@material/select/mdc-select";
-@import "@material/list/mdc-list";
 @import "@material/menu-surface/mdc-menu-surface";
 @import "@material/menu/mdc-menu";
+@import "@material/layout-grid/mdc-layout-grid";
 /*
 body {
   background-image: url('/images/background.jpg');
