--- a/app.scss
+++ b/app.scss
@@ -93,7 +93,8 @@ body {
   font-size: 36px;
 }
 .mdc-drawer__content {
-  background-image: url('/images/gloommap.jpg');
+  //background-image: url('/images/gloommap.jpg');
+  background-color: #b39370;
   background-repeat: no-repeat;
  background-attachment: fixed;
  height: 100%;
@@ -121,7 +122,7 @@ img:not([src]) {
 }
 @media only screen and (max-width: 600px) {
 .rounded {
-  border-radius: 35px;
+  border-radius: 15px;
   display: block;
   width: 80%;
   height: auto;
