--- a/app.scss
+++ b/app.scss
@@ -136,3 +136,52 @@ img:not([src]) {
   width: 100%;
   height: auto;
 }
+.card-container
+{
+    width: 100%;
+    height: 250px;
+    margin: 80px auto;
+    perspective: 1400px;
+}
+.cardFlip
+{
+    position: relative;
+
+    height: 100%;
+
+    width: 100%;
+    transform-style: preserve-3d;
+}
+
+.front,
+.back
+{
+    display: flex;
+
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    backface-visibility: hidden;
+}
+
+.front
+{
+    background-image:url('/images/attack-modifiers/top-small.jpg');
+    background-size:cover;
+    height:auto;
+    margin-right:auto; 
+    margin-left:auto;
+}
+
+.back
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    transform: rotateY(180deg);
+
+    color: #2196f3;
+    background: #fff;
+}
